--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Neshomebrew.GitHub.io by NESHomebrew</title>
+    <title>NESHomebrew GitHub Repository</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Neshomebrew.GitHub.io</h1>
-        <h2></h2>
+        <h1>Welcome to the Neshomebrew GitHub Repository</h1>
+        <h2>Thanks for stopping by</h2>
 
         <section id="downloads">
           <a href="https://github.com/NESHomebrew" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
